[gd_scene load_steps=3 format=3 uid="uid://18ibinpmvwir"]

[ext_resource type="Script" path="res://scripts/CargarDialogos/crearDialogos.gd" id="1_ywm8g"]
[ext_resource type="PackedScene" uid="uid://b7jonfd41k68h" path="res://Escenas/cuadro_dialogo.tscn" id="2_y28ju"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ywm8g")

[node name="dialogo" type="TextEdit" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1024.0
offset_top = -248.0
grow_horizontal = 0
grow_vertical = 0
placeholder_text = "Aqui va el dialogo del personaje"

[node name="personaje" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 13.0
offset_top = -20.0
offset_right = 245.0
offset_bottom = 20.0
grow_vertical = 2
item_count = 2
selected = 1
popup/item_0/text = "Usuario"
popup/item_0/id = 0
popup/item_1/text = "IA"
popup/item_1/id = 1

[node name="Label" type="Label" parent="personaje"]
layout_mode = 0
offset_left = 1.0
offset_top = -26.0
offset_right = 78.0
text = "Personaje"

[node name="emocion" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 259.0
offset_top = -15.0
offset_right = 415.0
offset_bottom = 16.0
grow_vertical = 2
item_count = 9
selected = 0
popup/item_0/text = "confiada"
popup/item_0/id = 0
popup/item_1/text = "curiosa"
popup/item_1/id = 1
popup/item_2/text = "descompuesta"
popup/item_2/id = 2
popup/item_3/text = "ensenando"
popup/item_3/id = 3
popup/item_4/text = "estatico"
popup/item_4/id = 4
popup/item_5/text = "felicitaciones"
popup/item_5/id = 5
popup/item_6/text = "saludando"
popup/item_6/id = 6
popup/item_7/text = "seguime"
popup/item_7/id = 7
popup/item_8/text = "senalando"
popup/item_8/id = 8

[node name="Label" type="Label" parent="emocion"]
layout_mode = 0
offset_top = -26.0
offset_right = 67.0
text = "Emocion"

[node name="cargar" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -111.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Agregar linea"

[node name="nivel" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -136.0
offset_top = 64.0
offset_right = 144.0
offset_bottom = 95.0
grow_horizontal = 2
placeholder_text = "nivel o nombre para el archivo"

[node name="titulo" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Creador de dialogos Version 0.2"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 120.0
offset_right = 976.0
offset_bottom = 224.0
text = "La idea  que se me ocurrio es tener un archivo por nivel, el archivo contiene:
Quien habla, si el usuario o la IA, el dialogo y el sprite que tiene que  usar la IA
dependiendo las emociones que se realicen.
Si hay una forma mas optima avisen.
los archivos se guardan en la carpeta dialogos del proyecto"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CuadroDialogo" parent="." instance=ExtResource("2_y28ju")]
visible = false
layout_mode = 1

[node name="verprueba" type="Button" parent="."]
layout_mode = 0
offset_left = 44.0
offset_top = 38.0
offset_right = 138.0
offset_bottom = 92.0
text = "Ver prueba
Dialogo
"

[connection signal="pressed" from="cargar" to="." method="_on_cargar_pressed"]
[connection signal="pressed" from="verprueba" to="." method="_on_verprueba_pressed"]
